--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="page">
       <header>
-        <div class="logo">
+        <div class="logo wobble-vertical-on-hover">
           <svg
             width="100%"
             height="100%"
@@ -194,7 +194,7 @@
       </header>
 
       <main>
-        <div class="cards">
+        <div class="cards img1">
           <h2>Paletas</h2>
           <img
             src="https://images.unsplash.com/photo-1488900128323-21503983a07e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MzR8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
@@ -202,7 +202,7 @@
           />
         </div>
 
-        <div class="cards">
+        <div class="cards img3">
           <h2>Shakes</h2>
           <img
             src="https://images.unsplash.com/photo-1615478503562-ec2d8aa0e24e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8NHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
@@ -210,7 +210,7 @@
           />
         </div>
 
-        <div class="cards">
+        <div class="cards img4">
           <h2>Massas</h2>
           <img
             src="https://images.unsplash.com/photo-1516559828984-fb3b99548b21?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MzU2fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
@@ -218,7 +218,7 @@
           />
         </div>
 
-        <div class="cards">
+        <div class="cards img2">
           <h2>Picolés</h2>
           <img
             src="https://images.unsplash.com/photo-1516043827470-d52c543c438f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8NjF8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
@@ -226,7 +226,7 @@
           />
         </div>
 
-        <div class="cards">
+        <div class="cards img5">
           <h2>Paletas</h2>
           <img
             src="https://images.unsplash.com/photo-1488900128323-21503983a07e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MzR8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
@@ -234,7 +234,7 @@
           />
         </div>
 
-        <div class="cards">
+        <div class="cards img6">
           <h2>Picolés</h2>
           <img
             src="https://images.unsplash.com/photo-1516043827470-d52c543c438f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8NjF8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
@@ -247,6 +247,5 @@
     <footer>
       <p>fale concosco no instagram <a href="#">@space_cream</a></p>
     </footer>
-    
   </body>
 </html>
